@@ -802,6 +802,22 @@ class Translator(nodes.NodeVisitor):
         self._in_literal = False
         self.body.append(self.defs['literal_block'][1])
 
+    def visit_math(self, node):
+        self.document.reporter.warning('"math" role not supported',
+                base_node=node)
+        self.visit_literal(node)
+
+    def depart_math(self, node):
+        self.depart_literal(node)
+
+    def visit_math_block(self, node):
+        self.document.reporter.warning('"math" directive not supported',
+                base_node=node)
+        self.visit_literal_block(node)
+
+    def depart_math_block(self, node):
+        self.depart_literal_block(node)
+
     def visit_meta(self, node):
         raise NotImplementedError, node.astext()
 
